--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px dotted red;
+    border: 1px dotted darkblue;
 }
 
 html {
@@ -32,4 +32,33 @@ html {
     background-color:rgba(0, 0, 0, 0.2);
     border-radius: 1em;
 
+}
+
+.answer {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 2px solid pink);
+    background-color:rgba(0, 0, 0, 0.2); 
+}
+
+.answer:hover {
+    background-color: rgba(255,192,203, 0.5);
+}
+
+.correct-answer {
+    background-color: green;
+}
+
+.wrong-answer {
+    background-color: crimson;
+}
+
+.times-up {
+    color: crimson;
 }
