--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,19 @@ html {
     background-color: rgba(255,192,203, 0.5);
 }
 
+.do-not-click {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 2px solid pink);
+    background-color:rgba(0, 0, 0, 0.2); 
+}
+
 .correct-answer {
     background-color: green;
 }
