--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 html {
     background: url(../images/background_trivia.jpg) no-repeat center center fixed;
     background-size: cover;
+    font-family: 'Architects Daughter', cursive;
 }
 
 .container {
@@ -29,8 +30,9 @@ html {
 
 #container-game {
     margin-top: 2rem;
-    background-color:rgba(0, 0, 0, 0.2);
+    background-color:rgba(0, 0, 0, 0.4);
     border-radius: 1em;
+    border: 2px solid pink;
     padding: 1em;
 
 }
@@ -39,34 +41,37 @@ html {
     margin-bottom: 2em;
 }
 
-.answer {
-    width: 30%;
+#timer{
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
+    width: 40%;
     padding: 1rem;
     border-radius: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    border: 2px solid pink);
+    border: 2px solid pink;
+    background-color:rgba(0, 0, 0, 0.2);
+
+}
+
+.timer:hover {
+    background-color: rgba(255,192,203, 0.5);
+}
+
+.answer {
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 2px solid pink;
     background-color:rgba(0, 0, 0, 0.2); 
 }
 
 .answer:hover {
     background-color: rgba(255,192,203, 0.5);
-}
-
-.do-not-click {
-    width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    padding: 1rem;
-    border-radius: 1rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 2px solid pink);
-    background-color:rgba(0, 0, 0, 0.2); 
 }
 
 .correct-answer {
